Orange data-model:
LinxFusion
- added rnaSupport

Isofox:
- passing fusions removed filter field

Orange:
- RNA improved fusion and novel splice junction presentation

Compar:
- Linx fusion - dropped check of transcripts and JCN since removed from fusion
- Isofox fusion - dropped check of filter